# MEEPO_NZ

./: ARCGIS.md  GROUNDIFF.md  MATCH_TABLE.md  MeepoNZ.pyt  README.md  SPAG_DC.md  VM3.md  commands.txt  environment.yml  pyproject.toml  requirements.txt  run_all.sh  setup.sh
configs/: default.yaml
meepo_nz/: __init__.py
meepo_nz/data/: __init__.py  augment.py  batch.py  dataset.py  dtm.py  es_data.py  folder_manifest.py  nz_data.py  preprocess.py  ptv3_collate.py  scene_dataset.py  splitting.py  subsampling.py  tile_io.py
meepo_nz/features/: __init__.py  shallow_features.py
meepo_nz/inference/: __init__.py  large_scene.py  spag_dc.py  spag_rl.py  voting.py
meepo_nz/models/: __init__.py  layers.py  mamba3_fused.py  meepo.py  meepo3.py  point_structure.py  pointssm3.py  prior_raster_encoder.py  scatter_gather.py  segmentation_model.py  ssm.py  submanifold_conv.py  vm3.py
meepo_nz/models/serialization/: __init__.py  default.py
meepo_nz/ops/triton_mamba3/: angle_dt.py  mamba3_siso_bwd.py  mamba3_siso_combined.py  mamba3_siso_fwd.py  mamba3_siso_step.py  (+1 more)
meepo_nz/training/: __init__.py  losses.py  metrics.py  trainer.py  visualize.py
meepo_nz/utils/: __init__.py  config.py  laz_io.py  progress.py
proof/: DESIGN.md
scripts/: 01_download_data.py  02_build_dtm.py  02_build_prior_raster.py  03_classify_and_sample.py  04_preprocess.py  05_train.py  06_infer.py  07_classify_tiles.py  08_classify_grid.py  09_infer_large_scenes.py  10_fit_spag_rl.py  12_label_audit.py  check_mamba3_triton.py  check_triton_ssd.py  probe_vram.py  smoke_test.py  smoke_vm3.py
